# AgnoAgent

./: .env.example  MIGRATION.md  README.md  examples.py  launch_interface.py  main.py  pyproject.toml
src/: __init__.py
src/agents/: __init__.py  base_agent.py  interface_agent.py  lektor_agent.py  optimizer_agent.py  query_ref_agent.py  sentiment_agent.py
src/core/: __init__.py  agent_manager.py  config.py  mcp_manager.py
src/interface/: gradio_app.py
src/mcp_services/: __init__.py  search_service.py  time_service.py  web_service.py
